<resources>
    <string name="app_name">L4</string>

    <string name="button_newgame">New Game</string>
    <string name="button_instructions">Help</string>
    <string name="button_scoreboard">Scoreboard</string>
    <string name="button_intro">Play Intro</string>
    <string name="title_activity_score">ScoreActivity</string>

    <string name="button_skip">Skip</string>

    <string name="text_controls">Controls: \nSwipe left, right, up or down to move.
    touch a spot on the screen to shoot.</string>
    <string name="text_asteroids">Asteroids: \nWhen asteroids hit you you lose oxygen.
        Shoot brown asteroids with your railgun! You have to dodge blue asteroids!</string>
    <string name="text_scroll">Scrolling Level: \nThe level scrolls depending on your position.
        If you move to the far right end of the screen the level will scroll faster.</string>
    <string name="text_collectible">Pick-Ups: \nOxygen restores a part of your tank.
        Invincibility makes you invincible for five seconds.
        The ammo pick-up restores the electricity of your railgun.</string>

    <string name="game_over">Game Over</string>
    <string name="game_won">Congratulations!</string>

    <string name="text_score">Completion time:</string>
    <string name="sec_score">seconds</string>

    <string name="username">Playername</string>
    <string name="score">Score</string>
    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_read_score">ReadScoreActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_high_score">CreateHighScoreActivity</string>
    <string name="readScore">Read score</string>
    <string name="button_continue">Continue</string>
    <string name="button_quit">Quit to Main Menu</string>
</resources>
