<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/text_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_white"
                android:id="@+id/controls" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/text_asteroids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_white"
                android:id="@+id/asteroids" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/text_scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_white"
                android:id="@+id/scroll" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/text_collectible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_white"
                android:id="@+id/collectible" />
        </TableRow>
    </TableLayout>
</LinearLayout>