<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:text="@string/game_won"
                android:textSize="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/game_won_view" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_white"
                android:gravity="center"
                android:id="@+id/score_view" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity ="center"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/white"
                android:layout_alignParentStart="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Add"
                android:id="@+id/button"
                android:layout_alignBottom="@+id/editText2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@android:color/white"/>
        </TableRow>





        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="@dimen/activity_vertical_margin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readScore"
                android:id="@+id/readScoreButton"
                android:layout_below="@+id/view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/view"
                android:layout_alignEnd="@+id/view"
                android:background="@android:color/white"/>
        </TableRow>
    </TableLayout>

</LinearLayout>